# Smallworld

./: CMakeLists.txt  MapLoader.cpp  MapLoader.h  README.md  main.cpp  map.cpp  map.h
GameConfig/: Powers  Races
Maps/: 2players.map  3players.map  3playersR2.map  4players.map  5players.map  ThreePlayer.map  ThreePlayersR2.map  testMap.map
src/: AggressiveStrategy.cpp  CoinsDecorator.cpp  CoinsDecorator.h  ConquestDecorator.cpp  ConquestDecorator.h  DefensiveStrategy.cpp  HandDecorator.cpp  HandDecorator.h  MapLoader.cpp  MapLoader.h  ModerateStrategy.cpp  PhaseObserver.cpp  PhaseObserver.h  PhaseSubject.cpp  PhaseSubject.h  RandomStrategy.cpp  StatsDecorator.cpp  StatsDecorator.h  Strategy.cpp  Strategy.h  faction.cpp  faction.h  factions.cpp  factions.h  gameEngine.cpp  gameEngine.h  gamebox.cpp  gamebox.h  main.cpp  mainOLD.cpp  map.cpp  map.h  observer.cpp  observer.h  piece.cpp  piece.h  player.cpp  player.h  rDice.cpp  rDice.h  (+8 more)
